--- a/src/Bestbuy_parsing_test.ipynb
+++ b/src/Bestbuy_parsing_test.ipynb
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\khole\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\pconn\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
@@ -53,37 +53,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "urls = [#common\n",
-    "        # 'https://www.bestbuy.com/site/apple-iphone-14-128gb-unlocked-midnight/6507555.p?skuId=6507555',\n",
-    "        # 'https://www.bestbuy.com/site/samsung-galaxy-s22-ultra-128gb-phantom-black-verizon/6494471.p?skuId=6494471',\n",
-    "        # 'https://www.bestbuy.com/site/hp-deskjet-2755e-wireless-inkjet-printer-with-3-months-of-instant-ink-included-with-hp-white/6454282.p?skuId=6454282',\n",
-    "        # 'https://www.bestbuy.com/site/jbl-flip-5-portable-bluetooth-speaker-black/6356535.p?skuId=6356535',\n",
-    "        # 'https://www.bestbuy.com/site/microsoft-365-family-up-to-6-people-12-month-subscription-activation-required-windows-mac-os-apple-ios-android-digital/6258038.p?skuId=6258038',\n",
-    "        # 'https://www.bestbuy.com/site/turbotax-deluxe-2023-federal-e-file-state-mac-os-windows-digital/6560825.p?skuId=6560825',\n",
-    "        # 'https://www.bestbuy.com/site/hamilton-beach-classic-4-slice-toaster-with-sure-toast-technology-stainless-steel/6518125.p?skuId=6518125',\n",
-    "        # 'https://www.bestbuy.com/site/razor-mx350-dirt-rocket-ebike-w-7-miles-max-operating-range-14-mph-max-speed-small-blue/3698469.p?skuId=3698469',\n",
-    "        # 'https://www.bestbuy.com/site/lg-65-class-c3-series-oled-4k-uhd-smart-webos-tv/6535929.p?skuId=6535929',\n",
-    "        # NO LONGER AVAILABLE ON BESTBUY 'https://www.bestbuy.com/site/ge-1-4-cu-ft-mid-size-microwave-black/3180025.p?skuId=3180025',\n",
-    "        # 'https://www.bestbuy.com/site/apple-iphone-13-5g-128gb-unlocked-midnight/6417788.p?skuId=6417788',\n",
-    "        # 'https://www.bestbuy.com/site/hogwarts-legacy-standard-edition-xbox-series-x/6502627.p?skuId=6502627',\n",
-    "        # 'https://www.bestbuy.com/site/star-wars-jedi-survivor-standard-edition-playstation-5/6528657.p?skuId=6528657',\n",
-    "        # 'https://www.bestbuy.com/site/ninja-woodfire-pizza-oven-8-in-1-outdoor-oven-5-pizza-settings-700f-smoker-woodfire-technology-electric-terracotta-red/6548901.p?skuId=6548901',\n",
-    "        'https://www.bestbuy.com/site/igloo-imx-24-quart-cooler-gray/6523836.p?skuId=6523836',\n",
+    "        (1,'https://www.bestbuy.com/site/apple-iphone-14-128gb-unlocked-midnight/6507555.p?skuId=6507555'),\n",
+    "        (2,'https://www.bestbuy.com/site/samsung-galaxy-s22-ultra-128gb-phantom-black-verizon/6494471.p?skuId=6494471'),\n",
+    "        (3,'https://www.bestbuy.com/site/hp-deskjet-2755e-wireless-inkjet-printer-with-3-months-of-instant-ink-included-with-hp-white/6454282.p?skuId=6454282'),\n",
+    "        (4,'https://www.bestbuy.com/site/jbl-flip-5-portable-bluetooth-speaker-black/6356535.p?skuId=6356535'),\n",
+    "        (5,'https://www.bestbuy.com/site/microsoft-365-family-up-to-6-people-12-month-subscription-activation-required-windows-mac-os-apple-ios-android-digital/6258038.p?skuId=6258038'),\n",
+    "        (6,'https://www.bestbuy.com/site/turbotax-deluxe-2023-federal-e-file-state-mac-os-windows-digital/6560825.p?skuId=6560825'),\n",
+    "        (7,'https://www.bestbuy.com/site/hamilton-beach-classic-4-slice-toaster-with-sure-toast-technology-stainless-steel/6518125.p?skuId=6518125'),\n",
+    "        (8,'https://www.bestbuy.com/site/razor-mx350-dirt-rocket-ebike-w-7-miles-max-operating-range-14-mph-max-speed-small-blue/3698469.p?skuId=3698469'),\n",
+    "        (9,'https://www.bestbuy.com/site/lg-65-class-c3-series-oled-4k-uhd-smart-webos-tv/6535929.p?skuId=6535929'),\n",
+    "        # NO LONGER AVAILABLE ON BESTBUY (10,'https://www.bestbuy.com/site/ge-1-4-cu-ft-mid-size-microwave-black/3180025.p?skuId=3180025',\n",
+    "        (11,'https://www.bestbuy.com/site/apple-iphone-13-5g-128gb-unlocked-midnight/6417788.p?skuId=6417788'),\n",
+    "        (12,'https://www.bestbuy.com/site/hogwarts-legacy-standard-edition-xbox-series-x/6502627.p?skuId=6502627'),\n",
+    "        (13,'https://www.bestbuy.com/site/star-wars-jedi-survivor-standard-edition-playstation-5/6528657.p?skuId=6528657'),\n",
+    "        (14,'https://www.bestbuy.com/site/ninja-woodfire-pizza-oven-8-in-1-outdoor-oven-5-pizza-settings-700f-smoker-woodfire-technology-electric-terracotta-red/6548901.p?skuId=6548901'),\n",
+    "        (15,'https://www.bestbuy.com/site/igloo-imx-24-quart-cooler-gray/6523836.p?skuId=6523836'),\n",
     "        #BB exclusive\n",
-    "        'https://www.bestbuy.com/site/mcafee-total-protection-5-device-antivirus-internet-security-software-1-year-subscription-android-apple-ios-chrome-mac-os-windows-digital/6517326.p?skuId=6517326',\n",
-    "        'https://www.bestbuy.com/site/norton-360-deluxe-5-device-antivirus-internet-security-software-vpn-dark-web-monitoring-1-year-subscription-android-mac-os-windows-apple-ios-digital/6346690.p?skuId=6346690',\n",
+    "        (40,'https://www.bestbuy.com/site/mcafee-total-protection-5-device-antivirus-internet-security-software-1-year-subscription-android-apple-ios-chrome-mac-os-windows-digital/6517326.p?skuId=6517326'),\n",
+    "        (41,'https://www.bestbuy.com/site/norton-360-deluxe-5-device-antivirus-internet-security-software-vpn-dark-web-monitoring-1-year-subscription-android-mac-os-windows-apple-ios-digital/6346690.p?skuId=6346690'),\n",
     "        ]\n",
     "\n",
-    "s = Service(executable_path='D:\\CU Boulder - Data Science\\Spring 2024\\Data Mining\\chromedriver.exe')"
+    "s = Service() #Service(executable_path='D:\\CU Boulder - Data Science\\Spring 2024\\Data Mining\\chromedriver.exe')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,13 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "https://www.bestbuy.com/site/apple-iphone-14-128gb-unlocked-midnight/6507555.p?skuId=6507555done\n",
+      "https://www.bestbuy.com/site/samsung-galaxy-s22-ultra-128gb-phantom-black-verizon/6494471.p?skuId=6494471done\n",
+      "https://www.bestbuy.com/site/hp-deskjet-2755e-wireless-inkjet-printer-with-3-months-of-instant-ink-included-with-hp-white/6454282.p?skuId=6454282done\n",
+      "https://www.bestbuy.com/site/jbl-flip-5-portable-bluetooth-speaker-black/6356535.p?skuId=6356535done\n",
+      "https://www.bestbuy.com/site/microsoft-365-family-up-to-6-people-12-month-subscription-activation-required-windows-mac-os-apple-ios-android-digital/6258038.p?skuId=6258038done\n",
+      "https://www.bestbuy.com/site/turbotax-deluxe-2023-federal-e-file-state-mac-os-windows-digital/6560825.p?skuId=6560825done\n",
+      "https://www.bestbuy.com/site/hamilton-beach-classic-4-slice-toaster-with-sure-toast-technology-stainless-steel/6518125.p?skuId=6518125done\n",
+      "https://www.bestbuy.com/site/razor-mx350-dirt-rocket-ebike-w-7-miles-max-operating-range-14-mph-max-speed-small-blue/3698469.p?skuId=3698469done\n",
+      "https://www.bestbuy.com/site/lg-65-class-c3-series-oled-4k-uhd-smart-webos-tv/6535929.p?skuId=6535929done\n",
+      "https://www.bestbuy.com/site/apple-iphone-13-5g-128gb-unlocked-midnight/6417788.p?skuId=6417788done\n",
+      "https://www.bestbuy.com/site/hogwarts-legacy-standard-edition-xbox-series-x/6502627.p?skuId=6502627done\n",
+      "https://www.bestbuy.com/site/star-wars-jedi-survivor-standard-edition-playstation-5/6528657.p?skuId=6528657done\n",
+      "https://www.bestbuy.com/site/ninja-woodfire-pizza-oven-8-in-1-outdoor-oven-5-pizza-settings-700f-smoker-woodfire-technology-electric-terracotta-red/6548901.p?skuId=6548901done\n",
       "https://www.bestbuy.com/site/igloo-imx-24-quart-cooler-gray/6523836.p?skuId=6523836done\n",
       "https://www.bestbuy.com/site/mcafee-total-protection-5-device-antivirus-internet-security-software-1-year-subscription-android-apple-ios-chrome-mac-os-windows-digital/6517326.p?skuId=6517326done\n",
       "https://www.bestbuy.com/site/norton-360-deluxe-5-device-antivirus-internet-security-software-vpn-dark-web-monitoring-1-year-subscription-android-mac-os-windows-apple-ios-digital/6346690.p?skuId=6346690done\n"
@@ -124,7 +137,7 @@
     "for idx,url in enumerate(urls):\n",
     "    \n",
     "    driver = webdriver.Chrome(service=s)\n",
-    "    driver.get(url)\n",
+    "    driver.get(url[1])\n",
     "    driver.maximize_window()\n",
     "    reviews_button = driver.find_element(By.LINK_TEXT,'See All Customer Reviews')\n",
     "    reviews_button.click()\n",
@@ -132,7 +145,7 @@
     "    html_product = driver.find_element(By.CLASS_NAME,'row').get_attribute('outerHTML')\n",
     "    product_soup = BeautifulSoup(html_product,'html.parser')\n",
     "\n",
-    "    product_id = idx+1\n",
+    "    product_id = url[0] #idx+1\n",
     "\n",
     "    site_id = 'BB'+str(product_id)\n",
     "    # Product name\n",
@@ -168,7 +181,10 @@
     "        # whole_page = driver.find_element(By.CLASS_NAME,'ugc-reviews reviews-content-wrapper v-m-top-xs')\n",
     "        time.sleep(3) #3)\n",
     "        #html_review = None\n",
-    "        html_review = whole_page.find_element(By.CLASS_NAME,'reviews-list').get_attribute('outerHTML')\n",
+    "        #html_review = whole_page.find_element(By.CLASS_NAME,'reviews-list').get_attribute('outerHTML')\n",
+    "        html_review = WebDriverWait(driver,timeout=8,poll_frequency=0.1).until(\n",
+    "            EC.visibility_of_element_located((By.CLASS_NAME,'reviews-list'))\n",
+    "        ).get_attribute('outerHTML')\n",
     "        whole_page_soup = BeautifulSoup(html_review,'html.parser')\n",
     "        all_reviews = whole_page_soup.find_all('li',class_='review-item')\n",
     "        all_reviews\n",
@@ -215,13 +231,13 @@
     "\n",
     "        next_page_buton = driver.find_element(By.XPATH,\"//a[@data-track='Page next']\")\n",
     "        next_page_buton.click()\n",
-    "    print(f\"{url}done\")\n",
+    "    print(f\"{url[1]}: done\")\n",
     "    driver.quit()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -618,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26190"
+       "28192"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -754,9 +770,9 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26185</th>\n",
-       "      <td>3</td>\n",
-       "      <td>BB3</td>\n",
+       "      <th>28187</th>\n",
+       "      <td>41</td>\n",
+       "      <td>BB41</td>\n",
        "      <td>356</td>\n",
        "      <td>Returned this product</td>\n",
        "      <td>TraceyPortchester</td>\n",
@@ -766,9 +782,9 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26186</th>\n",
-       "      <td>3</td>\n",
-       "      <td>BB3</td>\n",
+       "      <th>28188</th>\n",
+       "      <td>41</td>\n",
+       "      <td>BB41</td>\n",
        "      <td>357</td>\n",
        "      <td>forget BB</td>\n",
        "      <td>Deede</td>\n",
@@ -778,9 +794,9 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26187</th>\n",
-       "      <td>3</td>\n",
-       "      <td>BB3</td>\n",
+       "      <th>28189</th>\n",
+       "      <td>41</td>\n",
+       "      <td>BB41</td>\n",
        "      <td>358</td>\n",
        "      <td>Decent product</td>\n",
        "      <td>RamonI</td>\n",
@@ -790,9 +806,9 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26188</th>\n",
-       "      <td>3</td>\n",
-       "      <td>BB3</td>\n",
+       "      <th>28190</th>\n",
+       "      <td>41</td>\n",
+       "      <td>BB41</td>\n",
        "      <td>359</td>\n",
        "      <td>Works great</td>\n",
        "      <td>GracieW</td>\n",
@@ -802,9 +818,9 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26189</th>\n",
-       "      <td>3</td>\n",
-       "      <td>BB3</td>\n",
+       "      <th>28191</th>\n",
+       "      <td>41</td>\n",
+       "      <td>BB41</td>\n",
        "      <td>360</td>\n",
        "      <td>performance gain</td>\n",
        "      <td>Poli</td>\n",
@@ -815,7 +831,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>26190 rows × 9 columns</p>\n",
+       "<p>28192 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -826,11 +842,11 @@
        "3              1        BB1         4    Hello….Can You Hear Me Now?   \n",
        "4              1        BB1         5                        Great!!   \n",
        "...          ...        ...       ...                            ...   \n",
-       "26185          3        BB3       356          Returned this product   \n",
-       "26186          3        BB3       357                      forget BB   \n",
-       "26187          3        BB3       358                 Decent product   \n",
-       "26188          3        BB3       359                    Works great   \n",
-       "26189          3        BB3       360               performance gain   \n",
+       "28187         41       BB41       356          Returned this product   \n",
+       "28188         41       BB41       357                      forget BB   \n",
+       "28189         41       BB41       358                 Decent product   \n",
+       "28190         41       BB41       359                    Works great   \n",
+       "28191         41       BB41       360               performance gain   \n",
        "\n",
        "           reviewer_name                                     review_content  \\\n",
        "0                AmandaD  Husband upgraded from a 12 to a 14, loves it. ...   \n",
@@ -839,11 +855,11 @@
        "3              PauletteP  Apple products are very good products but of c...   \n",
        "4               AnthonyC  Awesome product love it so much. I would recom...   \n",
        "...                  ...                                                ...   \n",
-       "26185  TraceyPortchester  did not have the capacity to safeguard all of ...   \n",
-       "26186              Deede  Received in email but not downloadable.  Geek ...   \n",
-       "26187             RamonI  It’s a good antivirus program it does keep my ...   \n",
-       "26188            GracieW  Works great, never had a problem with it, will...   \n",
-       "26189               Poli  I am using Norton for years.Has a lot of good ...   \n",
+       "28187  TraceyPortchester  did not have the capacity to safeguard all of ...   \n",
+       "28188              Deede  Received in email but not downloadable.  Geek ...   \n",
+       "28189             RamonI  It’s a good antivirus program it does keep my ...   \n",
+       "28190            GracieW  Works great, never had a problem with it, will...   \n",
+       "28191               Poli  I am using Norton for years.Has a lot of good ...   \n",
        "\n",
        "      review_star_rating review_helpful_votes  verified_purchase  \n",
        "0                      5                    0               True  \n",
@@ -852,16 +868,16 @@
        "3                      5                    0               True  \n",
        "4                      5                    0               True  \n",
        "...                  ...                  ...                ...  \n",
-       "26185                  1                    0               True  \n",
-       "26186                  1                    0               True  \n",
-       "26187                  4                    0               True  \n",
-       "26188                  5                    0               True  \n",
-       "26189                  5                    1               True  \n",
+       "28187                  1                    0               True  \n",
+       "28188                  1                    0               True  \n",
+       "28189                  4                    0               True  \n",
+       "28190                  5                    0               True  \n",
+       "28191                  5                    1               True  \n",
        "\n",
-       "[26190 rows x 9 columns]"
+       "[28192 rows x 9 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,14 +901,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# df_products.to_excel(\"BB_Product_data_all.xlsx\", index=False)\n",
     "# df_reviews.to_excel(\"BB_Review_data_all.xlsx\", index=False)\n",
     "\n",
-    "df_review1.to_excel(\"../data/BB_Review_data.xlsx\", index=False)"
+    "#df_review1.to_excel(\"../data/BB_Review_data.xlsx\", index=False)\n",
+    "df_review1.to_csv(\"../data/BB_Review_data_wID.csv\",index=False)"
    ]
   },
   {
@@ -1676,7 +1693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
