--- a/Research Project/data.qmd
+++ b/Research Project/data.qmd
@@ -481,8 +481,6 @@ We can see 2 major clusters at (0,0) which are mostly outliers where a review is
 
 The isolated data points or "islands" outside of the main clusters suggest outliers or unique instances within the dataset. These isolated points may represent reviews that deviate significantly from the overall patterns observed in the data. They could indicate rare or extreme cases that warrant further investigation. For instance, these outliers might correspond to highly subjective or polarized reviews that are not typical of the majority of reviews.
 
-
-    * Box Plots
 ```{python fig-violin-plots1}
 #| label:    fig-violin-plots1
 #| fig-cap:  "Violin Plots of Review Star-Rating vs. Subjectivity, by Site"
@@ -735,8 +733,10 @@ We are retaining the totality of the data we've collected, and will filter the d
 
 ## Insights from Collection and EDA 
 
-* As in @percUse, online reviews across multiple websites tend toward positivity (reference polarity and star ratings here).
+As in @percUse, we find that online reviews, this time across multiple websites, tend toward positivity.  The values for star rating tend toward the 3 to 5 out of 5 star range, the polarity tends toward positive as star rating increases, and subjectivity (and one might argue, expressiveness) increases with star rating as well.  These correlations can prove useful to us in our research.
 
-* Statistically significant differences for review subjectivity, polarity across each of the three websites.
+We've also witnessed, tested, and verified that there is a statistically significant difference for review subjectivity and polarity, given the comment was hosted on a specific website.  In light of these significant test results, we believe it may be necessary to account for the specific website from whence a review originates in training, testing, and validation data.  The stark differences, without adjustment, could negatively impact the performance of any models if we fail to account for these differences therein.  
 
-* Exclusion of outliers for one or more categories could result in excluding lower star rating reviews, which could impact model.
+The nature of the distribution of useful votes for a review poses a potential challenge to our research.  The exponential distribution of useful votes could prove difficult to predict, as more and more useful votes become exceedingly rare for a given customer comment.  As such, we may have an easier time with *categorizing* a review as being useful or not useful, in lieu of *predicting* a numeric value to represent how useful a comment is (e.g. predict the number of votes in favor of a comment as being useful to other customers).
+
+Furthermore, exclusion of outliers could also pose challenges to our research.  When excluding outliers, since the distribution of star rating tends toward the more positive reviews and results (reference @fig-outliers-star-rating), we could inadvertently build models that perform the same way and are less able or unable to effectively categorize the usefulness of a lower star-rated review comment.  With the nature of these outliers and the fact that having a high number of useful votes in and of itself is an outlier, we may need to examine building models upon the normalized data (e.g. the filters applied in @fig-qq-plot-subj-no-out and @fig-qq-plots-pol-no-out) as well as the negation of that normalization, focusing on the outliers, so as to ensure that all the cases for our models are covered.
