--- a/Research Project/models implemented.qmd
+++ b/Research Project/models implemented.qmd
@@ -3,11 +3,23 @@
 ```{python importsBlock}
 import pandas as pd, numpy as np, matplotlib.pyplot as plt
 import seaborn as sns
-import pingouin as pg
-from statsmodels.stats.multicomp import pairwise_tukeyhsd
-import statsmodels.api as sm
-from wordcloud import WordCloud
-import pingouin as pg 
+# import pingouin as pg
+# from statsmodels.stats.multicomp import pairwise_tukeyhsd
+# import statsmodels.api as sm
+# from wordcloud import WordCloud
+# import pingouin as pg 
+from sklearn import tree
+from sklearn.metrics import (
+    accuracy_score,f1_score,
+    precision_score,recall_score, 
+    confusion_matrix, ConfusionMatrixDisplay,
+)
+from sklearn.model_selection import train_test_split
+from sklearn.linear_model import LogisticRegression
+from sklearn.neighbors import KNeighborsClassifier
+from sklearn import svm
+import graphviz
+
 
 product_data = pd.read_csv('../data/master_product_list.csv')
 #review_data = pd.read_csv('../data/combined_review_table.csv')
@@ -21,9 +33,212 @@ review_data = pd.DataFrame(
 )
    
 review_metrics = pd.read_csv('../data/combined_review_metrics.csv')
+
+test_metrics = pd.DataFrame(
+    {
+        'Model':[],
+        'Accuracy':[],
+        'F1':[],
+        'Precision':[],
+        'Recall':[]
+    }
+)
+
 ```
 
 Here's where we'll list out our models
+
+<!--Note from Patrick: 
+
+
+Started building some models based upon what's been taught in class.
+
+The below are simple classification models, examining whether a review comment is or is not useful (added a boolean to say it's useful if it has one or more votes for being useful). 
+
+May still need to look at MLR, haven't built or run it yet.  May be good to look at this in conjunction with the Logistic Regression.
+
+Ran a decision tree
+
+    * most impactful factors (in order) appear to be review star rating, review length, polarity
+
+    * may need to include product subjectivity as well
+
+Ran Logistic Regression (performs well)
+
+
+
+Ran K-Nearest neighbors
+
+Ran Support Vector Machine
+
+
+
+Current modeling examines doing each of these algorithms against the items that match across all websites.
+
+Each of these models runs may need to be modified such that they're also run against the external item(s).
+
+Each of these models may also need some data modifications to include new variables, and to seek ways and means to avoid overfitting.
+
+ -->
+
+## Decision Tree
+```{python data}
+review_data_base.head()
+review_data_base['is_helpful'] = review_data_base['review_helpful_votes'] > 0
+X,y = [review_data_base[
+    ['review_star_rating','verified_purchase','review_subjectivity',
+    'review_polarity','review_length']
+],review_data_base['is_helpful'].astype(int)]
+
+t = pd.DataFrame(review_data_base.dropna())
+
+```
+
+
+```{python dTreeClassifier}
+
+
+## research how to replace tree headers with
+## names and values
+
+X_train,X_test,y_train,y_test = train_test_split(
+    X,y,test_size=0.2,random_state=1337
+)
+#clf = tree.DecisionTreeClassifier(criterion=)
+clf = tree.DecisionTreeClassifier(criterion = 'entropy',max_depth=6)
+clf=clf.fit(X_train,y_train)
+#tree.plot_tree(clf)
+dot_data = tree.export_graphviz(clf,out_file=None)
+#graph = graphviz.Source(dot_data)
+#display(graph)
+
+y_pred = clf.predict(X_test)
+test_metrics.loc[len(test_metrics)] = {
+    'Model':'Decision Tree',
+    'Accuracy':accuracy_score(y_test,y_pred),
+    'F1':f1_score(y_test,y_pred),
+    'Precision':precision_score(y_test,y_pred),
+    'Recall':recall_score(y_test,y_pred)
+}
+
+ConfusionMatrixDisplay(confusion_matrix(y_test,y_pred)).plot()
+
+display(test_metrics)
+
+```
+
+## Logistic Regression
+
+```{python LogisitcRegressionClassifier}
+### extract parameters...
+
+mod = LogisticRegression()
+
+#reduce the sample size to examine reduction in 
+#overfit
+
+
+X,y = [t[
+    ['review_star_rating','verified_purchase','review_subjectivity',
+    'review_polarity','review_length']
+],t['is_helpful']]
+
+X_train,X_test,y_train,y_test = train_test_split(
+    X,
+    y,
+    test_size=0.8,
+    random_state=1337
+)
+
+log_reg = mod.fit(X_train,y_train)
+y_pred = mod.predict(X_test)
+
+test_metrics.loc[len(test_metrics)] = {
+    'Model':'Logistic Regression',
+    'Accuracy':accuracy_score(y_test,y_pred),
+    'F1':f1_score(y_test,y_pred),
+    'Precision':precision_score(y_test,y_pred),
+    'Recall':recall_score(y_test,y_pred)
+}
+
+ConfusionMatrixDisplay(confusion_matrix(y_test,y_pred)).plot()
+
+display(test_metrics)
+```
+
+
+## KNN?
+
+```{python KNearestNeighborsClassifier}
+# X,y = [review_data_base[
+#     ['review_star_rating','verified_purchase','review_subjectivity',
+#     'review_polarity','review_length']
+# ],review_data_base['is_helpful'].astype(int)]
+
+# X_train,X_test,y_train,y_test = train_test_split(
+#     X,
+#     y,
+#     test_size=0.8,
+#     random_state=1337
+# )
+knn = KNeighborsClassifier(n_neighbors=5)
+knn.fit(X_train,y_train)
+y_pred = knn.predict(X_test)
+test_metrics.loc[len(test_metrics)] = {
+    'Model':'K-Nearest Neighbors',
+    'Accuracy':accuracy_score(y_test,y_pred),
+    'F1':f1_score(y_test,y_pred),
+    'Precision':precision_score(y_test,y_pred),
+    'Recall':recall_score(y_test,y_pred)
+}
+ConfusionMatrixDisplay(confusion_matrix(y_test,y_pred)).plot()
+
+display(test_metrics)
+
+```
+
+## SVM Analysis
+
+```{python SVMClassifier}
+spt_vector = svm.SVC(kernel='linear').fit(X_train,y_train)
+
+y_pred = spt_vector.predict(X_test)
+
+test_metrics.loc[len(test_metrics)] = {
+    'Model':'Support Vector Machine',
+    'Accuracy':accuracy_score(y_test,y_pred),
+    'F1':f1_score(y_test,y_pred),
+    'Precision':precision_score(y_test,y_pred),
+    'Recall':recall_score(y_test,y_pred)
+}
+
+ConfusionMatrixDisplay(confusion_matrix(y_test,y_pred)).plot()
+
+display(test_metrics)
+```
+
+```{python SVMC2}
+other_data = pd.DataFrame(review_data_base[(~review_data_base['productID'].isin([1,2,3,5,6,8,9,11,12,13,14,15]))&(review_data_base['review_lang']=='en')])
+print(len(other_data))
+X = other_data[
+    ['review_star_rating','verified_purchase','review_subjectivity',
+     'review_polarity','review_length']
+]
+y_test = other_data['is_helpful']
+y_pred = spt_vector.predict(X)
+
+test_metrics.loc[len(test_metrics)] = {
+    'Model':'Support Vector Machine2',
+    'Accuracy':accuracy_score(y_test,y_pred),
+    'F1':f1_score(y_test,y_pred),
+    'Precision':precision_score(y_test,y_pred),
+    'Recall':recall_score(y_test,y_pred)
+}
+
+ConfusionMatrixDisplay(confusion_matrix(y_test,y_pred)).plot()
+
+display(test_metrics)
+```
 
 ## Examined Model - Multiple Linear Regression
 
